microservices/traefik/traefik-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.mancuso.services`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: sso
          namespace: default
  tls:
    secretName: traefik.mancuso.services-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.mancuso.services`)
      kind: Rule
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https
          namespace: default
